Fixed inputs being reversed on mobile

--- a/style.css
+++ b/style.css
@@ -72,8 +72,11 @@ body {
   resize: none;
   overflow: hidden;
   font-size: 1rem;
-  height: 0;
-  width: 0;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
   background-color: transparent;
   border: none;
   outline: none;
